--- a/templates/index.html.erb
+++ b/templates/index.html.erb
@@ -25,7 +25,7 @@
               <img class="streamyard-icon" src="<%= relative_path(template["icon"]) %>"></img>
             </td>
             <td>
-              <a href="/<%= relative_path(template["path"]) %>"><%= template["title"] %></a>
+              <a href="<%= relative_path(template["path"]) %>"><%= template["title"] %></a>
             </td>
           </tr>
           <% end %>
