Fixing Back link

--- a/templates/overlay/index.html.erb
+++ b/templates/overlay/index.html.erb
@@ -29,7 +29,7 @@
   </head>
   <body>
     <nav>
-      <a href="/">Back to All Generators</a>
+      <a href="<%= relative_path("") %>">Back to All Generators</a>
     </nav>
     <h1><%= overlay_template["title"] %> Overlay Generator
 
